update mainstem report to final and remove presentation from index

--- a/index.Qmd
+++ b/index.Qmd
@@ -8,7 +8,7 @@ listing:
   fields: [date, title, author]
   table-hover: true
   exclude: 
-    format: revealjs
+    categories: presentation
 page-layout: full
 ---
 
