--- a/posts/_childcodes/_DRWA_TURB.qmd
+++ b/posts/_childcodes/_DRWA_TURB.qmd
@@ -33,8 +33,8 @@ graph <- Turb %>%
   )+
   scale_fill_manual(name = "Flow Level", values = lmh_colors) +
   scale_shape_manual(name = "Year", values = c(21:23)) +
-  geom_hline(aes(yintercept = Turb_standardA, linetype = "VT A Standard"), color = standardcolor) +
-  geom_hline(aes(yintercept = Turb_standardB, linetype = "VT B Standard"), color = standardcolor2) +
+  geom_hline(aes(yintercept = Turb_standardA, linetype = "VT A Std"), color = standardcolor) +
+  geom_hline(aes(yintercept = Turb_standardB, linetype = "VT B Std"), color = standardcolor2) +
   scale_linetype_manual(name = "", values = c(2:3)) +
   scale_y_log10(limits = c(0.1, Turbmax)) +
   labs(title = .watershed,
@@ -49,5 +49,13 @@ widget <- girafe(ggobj = graph,
        ))
 
 widget
+
+
+discussion %>%
+  filter(Parameter == "Turb") %>%
+  filter(Watershed == .watershed) %>%
+  .$Discussion %>%
+  str_wrap(width = 60) %>%
+  cat()
 
 ```
