--- a/posts/DRWA2023.qmd
+++ b/posts/DRWA2023.qmd
@@ -1,5 +1,5 @@
 ---
-title: "DRAFT Deerfield River Watershed Water Quality (2021-2023)"
+title: "Deerfield River Watershed Water Quality (2021-2023)"
 author: "Ryan O'Donnell"
 desription: "Three year summary of water quality results collected by Deerfield River Watershed Association volunteers"
 date: "7/2/2024"
