--- a/posts/samplepaloozafinal.qmd
+++ b/posts/samplepaloozafinal.qmd
@@ -1,5 +1,5 @@
 ---
-title: "DRAFT Samplepalooza Final Report"
+title: "Samplepalooza Final Report"
 author: "Ryan O'Donnell"
 desription: "Final Report for the Samplepalooza Connecticut River nutrient sampling project"
 date: "4/1/2024"
